--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "project2",
   "version": "1.0.0",
   "description": "",
-  "main": "db.js",
+  "main": "main.js",
   "scripts": {
+    "start": "node src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "pug": "^3.0.2",
+    "sqlite-async": "^1.2.0",
+    "sqlite3": "^5.1.6"
+  }
 }
